[gd_scene load_steps=2 format=3 uid="uid://be72pos4rwil2"]

[ext_resource type="Script" path="res://MultiplayerControler.gd" id="1_hcqdn"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hcqdn")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 200.0
offset_right = 572.0
offset_bottom = 275.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 639.0
offset_top = 200.0
offset_right = 859.0
offset_bottom = 275.0
text = "Join"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 483.0
offset_top = 311.0
offset_right = 703.0
offset_bottom = 386.0
text = "Start Game"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 430.0
offset_top = 125.0
offset_right = 858.0
offset_bottom = 156.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 347.0
offset_top = 131.0
offset_right = 412.0
offset_bottom = 154.0
text = "Name"

[node name="AddAI" type="Button" parent="."]
layout_mode = 0
offset_left = 484.0
offset_top = 445.0
offset_right = 704.0
offset_bottom = 520.0
text = "Add AI"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="StartGame" to="." method="_on_start_game_button_down"]
[connection signal="button_down" from="AddAI" to="." method="_on_add_ai_button_down"]
